--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,11 +10,11 @@
 				"-g",
 				"-Wall",
 				"-MJ",
-				"compile_commands.json",
+				"build/compile_commands.json",
 				"-std=c++17",
 				"${fileDirname}/*.cpp",
 				"-o",
-				"${fileDirname}/${fileBasenameNoExtension}.out"
+				"${fileDirname}/build/${fileBasenameNoExtension}.out"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
