--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "type": "lldb",
             "request": "launch",
             "name": "myLaunch",
-            "program": "${fileDirname}/build/${fileBasenameNoExtension}.out",
+            //"program": "${fileDirname}/build/${fileBasenameNoExtension}.out",
+            "program": "${fileDirname}/build/main.out",
             "args": [],
             "cwd": "${fileDirname}"
         }
